# evm-sui

./: .gitignore  .prettierrc  LICENSE  README.md  ipfs-pain.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  walrus-low-hanging-fruits.html
.github/workflows/: pages.yml
contracts/: .solhint.json
contracts/script/: Deploy.s.sol
contracts/src/: EvmWalNFT.sol
docs/: 01-evm-nft.html  01-evmwal-nft.html  02-walrus-sites.html  03-walrus-resolver.html  04-dao-proposals.html  04-governance.html  05-verifiable-manifest.html  06-quilted-collection.html  07-nautilus.html  index.html  nautilus-batch-swap.html  nautilus-liquidation.html  nautilus-rfq.html  nautilus.html  style.css  walrus.html
docs/assets/: site.css
nautilus/: NAUTILUS_EVM.md  NAUTILUS_LOCAL_DEV.md  README.md  nautilus-evm-trust-layer.html  nautilus-pillar-overview.html  wtf-is-nautilus.html
nautilus/batch-swap/: package.json
nautilus/enclave-server/: Cargo.toml
nautilus/enclave-server/src/: common.rs  lib.rs  main.rs  seal_bootstrap.rs  walrus.rs
nautilus/enclave-server/src/batch_swap/: mod.rs  types.rs
nautilus/enclave-server/src/liquidation/: mod.rs  types.rs
nautilus/enclave-server/src/rfq/: mod.rs  types.rs
nautilus/liquidation/: package.json
nautilus/rfq/: .env.example  package.json  tsconfig.json
scripts/: extract-abi.ts  generate-assets.ts  write-deployed-address.ts
showcases/: README.md
showcases/01-evmwal-nft/: README.md  package.json
showcases/02-walrus-sites/: README.md  publish.sh
showcases/03-walrus-resolver/: README.md
showcases/04-dao-proposals/: README.md  package.json
showcases/05-verifiable-manifest/: example-usage.ts  manifest.ts  package.json  tsconfig.json
showcases/06-quilted-collection/: README.md  package.json
showcases/07-nautilus/: README.md
showcases/07-nautilus/enclave/: Cargo.toml  allowed_endpoints.yaml
showcases/07-nautilus/enclave/src/: common.rs  lib.rs  main.rs
showcases/07-nautilus/enclave/src/apps/price_oracle/: allowed_endpoints.yaml  mod.rs
showcases/contracts/: foundry.toml
tests/: walrus-backend-upload.test.mjs
tests/cycle1/: git-init.test.mjs  gitignore.test.mjs  gitkeep.test.mjs  nvmrc.test.mjs  package-json-devdeps.test.mjs  package-json-shape.test.mjs  pnpm-install.test.mjs  pnpm-workspace.test.mjs  (+2 more)
web/: .env.local.example  .gitignore  package.json
(+136 files in other folders)
