[package]
name = "defi-enclave-server"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bcs = "0.1.6"
tokio = { version = "1.43", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.6.0", features = ["cors"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"
anyhow = "1.0"
blake2b_simd = "1.0"

[features]
default = ["rfq"]
rfq = []
liquidation = []
batch-swap = []
